Moved main class into package and updated pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
                     <appendAssemblyId>false</appendAssemblyId>
                     <archive>
                         <manifest>
-                            <mainClass>Main</mainClass>
+                            <mainClass>com.airhacks.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
